Fixed font size on mobile view for the jumbotron h1, and h2

--- a/public/navbar.css
+++ b/public/navbar.css
@@ -270,11 +270,10 @@ aside h2 {
 @media (max-width: 637px) {
     .jumbotron h1 {
         margin: 0;
-        font-size: 4.5em;
+        font-size: 3.5em;
     }
-    .jumbotron h2 {}
-    .jumbotron img {
-        // padding: 0 0 0 45px;
+    .jumbotron h2 {
+        font-size: 2.5em;
     }
     .run-img {
         display: none;
